--- a/homework_03/index.html
+++ b/homework_03/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Epam Front End Lab. Preprocessors</title>
-  <link rel="stylesheet" type="text/css" href="css/style1.css">
-  <!--<link rel="stylesheet" type="text/css" href="css/style2.css">-->
+  <!--<link rel="stylesheet" type="text/css" href="css/style1.css">-->
+  <link rel="stylesheet" type="text/css" href="css/style2.css">
 </head>
 
 <body>
@@ -125,31 +125,28 @@
     <div>
        <!--task-->
        <h2>Залишити відгук </h2>
-        <div >
-              <div>
-                  <div class="name">
-                      <div class="pad">
-                        <p>ІМЯ</p>
-                        <input class="inpwidth" type="text" size="60" placeholder="Введіть імя">
-                      </div>
-                      <div>
-                          <p>ПРІЗВИЩЕ</p>
-                           <input class="inpwidth" type="text" size="60" placeholder="Введіть прізвище">
-                       </div>
-                 </div>
-                <p>ІМЕЙЛ</p>
-                <input class="inpwidth2" type="text" size="127" placeholder="Введіть імейл">
-                <p>ОЦІНІТЬ</p>
-                <input class="inpwidth2" type="text" size="127">
-                <p>НАПИШІТЬ ВІДГУК</p>
-                <textarea class="inpwidth2" rows="10" cols="128" name="text" placeholder="залишити відгук"></textarea>
-
+        <div class="feed">
+          <div>
+            <div class="name" >
+              <div class="pad" >
+                <p>ІМЯ</p>
+                <input class="inpwidth" type="text" size="60" placeholder="Введіть імя" />
               </div>
+              <div >
+                  <p>ПРІЗВИЩЕ</p>
+                   <input class="inpwidth" type="text" size="60" placeholder="Введіть прізвище" />
+               </div>
+            </div>
+            <p>ІМЕЙЛ</p>
+            <input class="inpwidth2" type="text" size="127" placeholder="Введіть імейл" />
+            <p>ОЦІНІТЬ</p>
+            <input class="inpwidth2" type="text" size="127">
+            <p>НАПИШІТЬ ВІДГУК</p>
+            <textarea class="inpwidth2" rows="10" cols="128" name="text" placeholder="залишити відгук"></textarea>
+          </div>
         </div>
-<button>НАДІСЛАТИ</button>
-        </div>
-
-
+        <button>НАДІСЛАТИ</button>
+      </div>
     </div>
 </body>
 
